# Thesis_livestock_monitoring

./: .gitignore  CMakeLists.txt  CowModel.py  README.md  SafeZoneModel.py  constants.py  cow_controler.py  firebase.json  index.js  lora.py  lora_controller.py  main.py  mqtt_controller.py  package-lock.json  package.json  platformio.ini  prj.conf  pubspec.yaml  safe_zone_controller.py  test.py
android/: build.gradle
android/app/: build.gradle  google-services.json
include/: global.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  global.dart  main.dart  test_cow.dart
lib/models/: cow_model.dart  save_zone_model.dart  user_model.dart
lib/pages/: add_safe_zone_map.dart  bluetooth_scan_screen.dart  cow_add_new_screen.dart  cow_detail_screen.dart  cow_list_screen.dart  cow_update_screen.dart  custom_bottom_navigation.dart  custom_dashboard.dart  device_screen.dart  home_page.dart  list_of_cow_page.dart  map_libre_page.dart  map_page.dart  safe_zone_map.dart  setting_page.dart  splash_screen.dart  warning_page.dart
lib/services/: cowService.dart  cow_service.dart  save_zone_service.dart  user_service.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
src/: main.cpp
src/ble/: CMakeLists.txt  ble.cpp  ble.hpp
src/button/: CMakeLists.txt  button.cpp  button.hpp
src/controllers/: constants.js  cowController.js  cowLocationController.js  influxdbController.js  influxdb_controller.js  mqttController.js  mqtt_controller.js  pushNotificationController.js  safeZoneController.js  userController.js
src/flash/: CMakeLists.txt  flash.cpp  (+1 more)
(+62 files in other folders)
